--- a/app/src/main/res/layout/fullimageview.xml
+++ b/app/src/main/res/layout/fullimageview.xml
@@ -3,9 +3,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/FullImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ImageView>
+    <ImageSwitcher
+        android:id="@+id/imageSwitcher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="SwitchImage">
+        <ImageView
+            android:id="@+id/FullImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </ImageView>
+    </ImageSwitcher>
+
 </LinearLayout>
