--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="fon">#102027</color>
-    <color name="button">#00b0ff</color>
+    <color name="button">#6756CC</color>
 </resources>
