--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/fon"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/fone">
+    <!--    android:background="@color/fon"-->
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/AddFile"
+        <androidx.appcompat.widget.AppCompatImageButton
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/button"
-            android:text="Добавить файл"
+            android:layout_height="100dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="@string/firstButton"
+            android:layout_weight="1"
             android:onClick="OpenDirectory"
-            android:layout_weight="1">
-        </Button>
+            android:src="@drawable/download"
+            android:background="@drawable/button_selector">
+        </androidx.appcompat.widget.AppCompatImageButton>
 
-        <Button
-            android:id="@+id/Refresh"
+        <androidx.appcompat.widget.AppCompatImageButton
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/button"
-            android:text="Обновить"
-            android:layout_weight="1">
-        </Button>
+            android:layout_height="100dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="@string/secondButton"
+            android:layout_weight="1"
+            android:src="@drawable/save"
+            android:background="@drawable/button_selector">
+        </androidx.appcompat.widget.AppCompatImageButton>
+
     </LinearLayout>
+
     <GridView
         android:id="@+id/GridView1"
+        style="@style/RoundedCornerButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:columnWidth="90dp"
         android:gravity="center"
         android:horizontalSpacing="10dp"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp">
-    </GridView>
-
-
-
+        android:verticalSpacing="10dp"></GridView>
 </LinearLayout>
