--- a/app/src/main/res/layout/opendir.xml
+++ b/app/src/main/res/layout/opendir.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/fone">
     <TextView
         android:id="@+id/textPath"
         android:layout_width="match_parent"
@@ -12,27 +13,40 @@
     <ListView
         android:id="@+id/list_dir"
         android:layout_width="match_parent"
-        android:layout_height="300dp"></ListView>
-    <RelativeLayout
-        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_weight="100">
+
+    </ListView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <Button
             android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:onClick="onClickBack"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_selector"
+
             android:text="back"
-            android:onClick="onClickBack"/>
+            />
 
         <Button
             android:id="@+id/go"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
             android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:onClick="onClickGo"
+            android:layout_weight="1"
+            android:background="@drawable/button_selector"
             android:text="go!"
-            android:onClick="onClickGo" />
-    </RelativeLayout>
-
+            />
+    </LinearLayout>
 
 </LinearLayout>
