--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,21 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
         <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="RoundedCornerButton" parent="@style/Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/inset</item>
+<!--        <item name="colorButtonNormal">#1a237e</item>-->
+<!--        <item name="colorControlHighlight">#673ab7</item>-->
+    </style>
+    <style name="Button" parent="@style/Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/inset_button</item>
+        <item name="colorButtonNormal">@color/fon</item>
+    </style>
 </resources>
