--- a/app/src/main/res/layout/opendir.xml
+++ b/app/src/main/res/layout/opendir.xml
@@ -25,12 +25,12 @@
             android:id="@+id/back"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:textColor="#ffffff"
             android:onClick="onClickBack"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:background="@drawable/button_selector"
-
             android:text="back"
             />
 
@@ -40,6 +40,7 @@
             android:layout_height="70dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
+            android:textColor="#ffffff"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:onClick="onClickGo"
