--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,6 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
     <style name="RoundedCornerButton" parent="@style/Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/inset</item>
 <!--        <item name="colorButtonNormal">#1a237e</item>-->
@@ -16,6 +15,6 @@
     </style>
     <style name="Button" parent="@style/Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/inset_button</item>
-        <item name="colorButtonNormal">@color/fon</item>
+        <item name="colorButtonNormal">@color/colorPrimaryDark</item>
     </style>
 </resources>
